# ai-datascientist-agent

./: README.md  main.py  nb_agent_backend.py  nb_agent_ui.py  pyproject.toml
prompts/: nb_agent_prompt.j2  subtasks_prompt.j2
tools/: nb_tools.py
